# sway.module_gapi-gl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets-defaults.json  Jenkinsfile  README.md  gcc-linux-xarch.Dockerfile  gcc-wasm.Dockerfile  index.html
docs/doxygen/: doxyfile.doxy
examples/: CMakeLists.txt  main.cpp
examples/01-dl-thread-webgl/: CMakeLists.txt  main.cpp
examples/01-dl-webgl/: CMakeLists.txt  README.md  main.cpp
examples/01-dyn-webgl/: CMakeLists.txt  README.md  main.cpp  webapp.cpp  webapp.hpp
examples/01-triangle/: CMakeLists.txt  README.md  main.cpp
examples/01-triangle-webgl/: CMakeLists.txt  README.md  main.cpp
examples/02-ibo/: CMakeLists.txt  README.md  main.cpp
examples/02-triangle/: CMakeLists.txt  README.md  main.cpp
examples/02-triangle-webgl/: CMakeLists.txt  README.md  main.cpp
examples/03-ibo/: CMakeLists.txt  README.md  main.cpp
examples/03-texture/: CMakeLists.txt  README.md  main.cpp
examples/04-texture/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  README.md  main.cpp
examples/triangle-webgl/: CMakeLists.txt  README.md  main.cpp
include/sway/: gapi.h
include/sway/gapi/: bufferaccesses.h  bufferdescription.h  bufferdrawcall.h  bufferobject.h  buffertargets.h  bufferusages.h  capabilities.h  extensions.h  extensionsupport.h  gl.h  prereqs.h  primitivetopologies.h  resource.h  shaderexceptions.h  shaderobject.h  shaderobjectcreateinfo.h  shaderprogram.h  shadertypes.h  shaderutils.h  typeutils.h  vertexattribute.h  vertexlayout.h  vertexlayout.inl  vertexsemantics.h  vertexsemantics.inl  viewport.h
include/sway/gapi/gl/: buffer.h  bufferaccesses.h  bufferdescription.h  bufferdrawcall.h  bufferobject.h  buffertargets.h  bufferusages.h  capabilities.h  capability.h  drawcall.h  exceptions.h  extensions.h  extensionsupport.h  prereqs.h  primitivetopologies.h  resource.h  shader.h  shaderexceptions.h  shaderobject.h  shaderobjectcreateinfo.h  shaderprogram.h  shadertypes.h  shaderutils.h  typeutils.h  vertexattribute.h  vertexlayout.h  vertexlayout.inl  vertexsemantics.h  vertexsemantics.inl  viewport.h
lib/cxx/include/sway/gapi/: gl.hpp  glmacros.hpp
lib/cxx/include/sway/gapi/gl/: oglblendequationconvertor.hpp  oglblendfunctionconvertor.hpp  oglblendstate.hpp  oglcapability.hpp  (+44 more)
lib/cxx/src/: oglbufferidgenerator.cpp  oglcapability.cpp  ogldrawcall.cpp  oglframebuffer.cpp  oglframebufferidgenerator.cpp  oglgenericbuffer.cpp  oglgenericbufferidgenerator.cpp  oglgenericshader.cpp  oglrenderbuffer.cpp  oglshaderpreprocessor.cpp  oglshaderprogram.cpp  oglstatecontext.cpp  ogltexture.cpp  ogltextureidgenerator.cpp  ogltexturesampler.cpp  ogluniform.cpp  oglvertexarray.cpp  oglvertexattriblayout.cpp  oglviewport.cpp  plug.cpp
lib/cxx/src/wrap/: oglbufferextension.cpp  oglframebufferextension.cpp  oglframebufferhelper.cpp  oglgenericbufferhelper.cpp  oglgenericshaderextension.cpp  oglgenericshaderhelper.cpp  oglinfoextension.cpp  oglinfohelper.cpp  oglrenderbufferextension.cpp  oglrenderbufferhelper.cpp  oglshaderprogramextension.cpp  oglshaderprogramhelper.cpp  oglstateextension.cpp  oglstatehelper.cpp  ogltextureextension.cpp  ogltexturehelper.cpp  oglvertexarrayextension.cpp  oglvertexarrayhelper.cpp  oglvertexattriblayoutextension.cpp  oglvertexattriblayouthelper.cpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  bufferidgenerator.spec.cpp  shader.spec.cpp  shaderpreprocessor.spec.cpp  viewport.spec.cpp
lib/cxx/tests/google/unit/: mockoglbufferidgenhelper.hpp  mockoglgenericshaderhelper.hpp
lib/include/sway/gapi/: gl.hpp
lib/include/sway/gapi/gl/: buffer.hpp  bufferhelper.hpp  bufferidgenerator.hpp  bufferidqueueimpl.hpp  capability.hpp  drawcall.hpp  exceptions.hpp  extensions.hpp  genericbuffer.hpp  genericshader.hpp  genericvertexattriblayout.hpp  oglblendequationconvertor.hpp  oglblendstate.hpp  oglbufferidgenerator.hpp  oglcapability.hpp  oglclearflagconvertor.hpp  oglcullfaceconvertor.hpp  oglcullstate.hpp  ogldepthstate.hpp  ogldrawcall.hpp  oglexceptions.hpp  oglextensions.hpp  oglframebuffer.hpp  oglgenericbuffer.hpp  oglgenericbufferhelper.hpp  oglgenericshader.hpp  oglgenericshaderhelper.hpp  oglshaderexceptions.hpp  oglshaderprogram.hpp  oglshaderprogramhelper.hpp  oglstate.hpp  oglstateenabledable.hpp  ogltexture.hpp  ogltexturesampler.hpp  oglvertexattriblayout.hpp  oglvertexattriblayouthelper.hpp  oglviewport.hpp  prereqs.hpp  shader.hpp  shaderhelper.hpp  (+6 more)
lib/src/: buffer.cpp  bufferhelper.cpp  bufferidgenerator.cpp  capability.cpp  drawcall.cpp  extensions.cpp  genericbuffer.cpp  genericshader.cpp  genericvertexattriblayout.cpp  oglbufferidgenerator.cpp  oglcapability.cpp  ogldrawcall.cpp  oglextensions.cpp  oglframebuffer.cpp  oglgenericbuffer.cpp  oglgenericbufferhelper.cpp  oglgenericshader.cpp  oglgenericshaderhelper.cpp  oglshaderprogram.cpp  oglshaderprogramhelper.cpp  oglstate.cpp  ogltexture.cpp  ogltexturesampler.cpp  ogluniform.cpp  oglvertexarray.cpp  oglvertexattriblayout.cpp  oglvertexattriblayouthelper.cpp  oglviewport.cpp  plug.cpp  shader.cpp  shaderhelper.cpp  shaderprogram.cpp  shaderprogramhelper.cpp  vertexattribhelper.cpp  vertexlayout.cpp  viewport.cpp
lib/src/wrap/: oglbufferextension.cpp  oglframebufferhelper.cpp  oglgenericbufferhelper.cpp  oglgenericshaderextension.cpp  oglgenericshaderhelper.cpp  oglinfohelper.cpp  oglshaderprogramextension.cpp  oglshaderprogramhelper.cpp  oglstateextension.cpp  oglstatehelper.cpp  ogltextureextension.cpp  ogltexturehelper.cpp  oglvertexarrayextension.cpp  oglvertexarrayhelper.cpp  oglvertexattriblayoutextension.cpp  oglvertexattriblayouthelper.cpp  openglbufferextension.cpp
lib/tests/google/: CMakeLists.txt  README.md  bufferidgenerator.spec.cpp  vertexsemantics.spec.cpp
lib/tests/google/unit/: mockoglgenericshaderhelper.hpp
src/: buffer.cpp  bufferdrawcall.cpp  bufferobject.cpp  capabilities.cpp  capability.cpp  drawcall.cpp  extensions.cpp  plug.cpp  shader.cpp  shaderobject.cpp  shaderprogram.cpp  vertexlayout.cpp  viewport.cpp
tests/: CMakeLists.txt  vertexsemantics.spec.cpp
(+48 files in other folders)
